# scholarmate

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  TutorPlan.md  start.sh
backend/: Dockerfile  main.py  pyproject.toml  test_pdf_documents_service.py  test_thinking_stream.py
backend/app/models/: epub_highlights.py  epub_metadata.py  epub_responses.py  knowledge_models.py  llm_types.py  pdf_metadata.py  pdf_responses.py  stream_types.py
backend/app/routers/: ai.py  epub.py  epub_highlights.py  epub_notes.py  epub_reading_statistics.py  highlights.py  knowledge.py  llm_config.py  notes.py  pdf.py  reading_statistics.py  tts.py
backend/app/services/: __init__.py  base_database_service.py  chat_notes_service.py  database_service.py  dual_chat_service.py  epub_cache.py  epub_chat_notes_service.py  epub_documents_service.py  epub_highlights_service.py  epub_progress_service.py  epub_reading_statistics_service.py  epub_service.py  highlights_service.py  llm_config_service.py  migration_service.py  ollama_service.py  pdf_cache.py  pdf_documents_service.py  pdf_service.py  reading_progress_service.py  reading_statistics_service.py  request_tracking_service.py  stream_parser.py  tts_service.py
backend/app/services/epub/: __init__.py  epub_chat_context_service.py  epub_content_processor.py  epub_image_service.py  epub_metadata_extractor.py  epub_navigation_service.py  epub_style_processor.py  epub_url_helper.py  epub_word_count_service.py
backend/app/services/knowledge/: __init__.py  concept_extractor.py  embedding_service.py  extraction_state.py  graph_builder.py  (+1 more)
backend/migrations/: 001_add_book_status.sql  002_create_epub_highlights.sql
backend/tests/: test_database_service_epub.py  test_epub_cache.py  test_epub_chat_context_service.py  test_epub_documents_service.py  test_epub_service_db_integration.py  test_stream_parser.py
backend/tests/test_knowledge/: __init__.py  test_concept_extractor.py  test_embedding_service.py  test_extraction_efficiency.py  test_extraction_state.py  test_graph_builder_v2.py  test_importance_recalculation.py  test_knowledge_database.py  test_knowledge_models.py  test_knowledge_search.py  test_relationship_crud.py
(+87 files in other folders)
